# mootloop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.driver  Dockerfile.matter-api  LICENSE  Makefile  README.md  THIRD-PARTY.md  docker-compose.matter.yaml  openapi.json  pyproject.toml
.claude/: RESUME.md
.claude/agents/: associate.md  judge.md  oc-associate.md  oc-partner.md  partner.md  rubric-judge.md
.github/workflows/: ci.yml
config/courts/: generic-mn-district-draft.docx  generic-mn-district.docx
config/tasks/: discovery-responses.yaml
docs/: backup.md  deploy-matter.md  deploy.md  quickstart-live-matter.md  security-frontend.md
docs/brainstorms/: 2026-07-11-mootloop-brainstorm.md  2026-07-12-frontend-folio-brainstorm.md
docs/evidence/: fe-0-pen-gate.html
docs/handoffs/: 2026-07-12-fe-0-deployed-pen-gate.md  2026-07-12-resume-frontend-deploy.md  2026-07-15-RESUME.md
docs/plans/: 2026-07-11-001-feat-mootloop-v1-agentic-litigation-pipeline-plan.md  2026-07-11-002-feat-demo-server-and-deployment-plan.md  2026-07-12-001-feat-hosted-frontend-folio-cockpit-plan.md
fixtures/synthetic-matter/: facts.json  matter.yaml  tags.yaml
frontend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/__tests__/: access.test.ts  attest.test.tsx  beginTask.test.tsx  events.test.ts  exportRoom.test.tsx  keys.test.ts  runStream.test.ts  soOrdered.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: ThemeToggle.tsx
frontend/lib/: format.ts
personas/: _standard.md  associate.md  judge.md  oc-associate.md  oc-partner.md  partner.md  rubric-judge.md
rubrics/: discovery-responses-v1.0.sha256  discovery-responses-v1.0.yaml
src/mootloop/: __init__.py  attest.py  budget.py  cli.py  llm.py  (+19 more)
tests/: conftest.py
tools/: make_reference_docx.py  privacy_grep.py
(+165 files in other folders)
