[project]
name = "mootloop"
version = "0.0.0"
description = "Agentic law firm simulator — six personas draft, attack, and adjudicate legal work product through rubric-gated loops, with a human attorney on the loop"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Damien Riehl" }]
keywords = ["legal", "litigation", "agents", "discovery", "law"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "eyecite>=2.6",
    "httpx>=0.27",
    "pydantic>=2",
    "python-docx>=1.2.0",
    "pyyaml",
    "typer",
]

[project.scripts]
mootloop = "mootloop.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "mypy",
    "respx>=0.21",
    "ruff",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mootloop"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["mootloop"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["mootloop"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "eyecite.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
markers = [
    "invariant: repo-hygiene and structural invariants",
]

[tool.coverage.run]
source = ["src/mootloop"]
